<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">MultiDesignLauncher</string>
	<string name="select_design">Select Design</string>
	<string name="menu_designs">Designs</string>
	<string name="design_1">Design 1</string>
	<string name="design_2">Design 2</string>
	<string name="design_3">Design 3</string>
	<string name="design_4">Design 4</string>
	<string name="design_5">Design 5</string>
</resources>