<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/launcher_bg">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="24dp"
		android:orientation="vertical">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_d1"
			style="@style/Widget.MaterialComponents.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/design_1" />

		<View android:layout_width="match_parent" android:layout_height="12dp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_d2"
			style="@style/Widget.MaterialComponents.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/design_2" />

		<View android:layout_width="match_parent" android:layout_height="12dp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_d3"
			style="@style/Widget.MaterialComponents.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/design_3" />

		<View android:layout_width="match_parent" android:layout_height="12dp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_d4"
			style="@style/Widget.MaterialComponents.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/design_4" />

		<View android:layout_width="match_parent" android:layout_height="12dp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_d5"
			style="@style/Widget.MaterialComponents.Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/design_5" />
	</LinearLayout>
</ScrollView>